--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Last updated September 19, 2019</p>
 
 
-        <p>Denis Svichkarev ("me", "I", or "my") operates https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site").</p>
+        <p>Denis Svichkarev ("me", "I", or "my") operates https://denis-svichkarev.github.io/ website as well as RemindVocab iOS app and any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site").</p>
 
         <p>This page informs you of my policies regarding the collection, use, and disclosure of personal data when you use the Site and the choices you have associated with that data.</p>
 
