--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <h2>Changes To This Privacy Policy</h2>
         <p>I may update my Privacy Policy from time to time. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
-        <p>I will not let you know via email. I will only update of the “Last updated” string at the top of this Privacy Policy.</p>
+        <p>I will not let you know via email. I will only update of the "Last updated" string at the top of this Privacy Policy.</p>
         <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
 
 
