--- a/test.html
+++ b/test.html
@@ -14,8 +14,8 @@
 
         <p>Кисс... пойдем гули</p>
 
-        <img src="test1.jpg" alt="..." width="300" height="200">
-        <img src="test2.jpg" alt="..." width="300" height="200">
+        <img src="test1.JPG" alt="..." width="300" height="200">
+        <img src="test2.JPG" alt="..." width="300" height="200">
 
 
 
