Added IncVocab links

--- a/incvocab-privacy-policy.html
+++ b/incvocab-privacy-policy.html
@@ -9,8 +9,100 @@
     </head>
     <body>
 
-        <h1>IncVocab Privacy Policy</h1>
+        <h1>Privacy Policy of IncVocab</h1>
 
+
+        <p>Last updated Aprile 4, 2024</p>
+
+
+        <p>Denis Svichkarev ("me", "I", or "my") operates https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site").</p>
+
+        <p>This page informs you of my policies regarding the collection, use, and disclosure of personal data when you use the Site and the choices you have associated with that data.</p>
+
+        <p>I use your data to provide and improve the Site. By using the Site, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in my Terms of Use.</p>
+
+        <p>Please read the Privacy Policy carefully before you start using IncVocab, because by using the Site you accept and agree to be bound and abide by these Privacy Policy.</p>
+
+
+        <h2>Information Collection And Use</h2>
+
+        <p>I collect several different types of information for various purposes to provide and improve my Site to you.</p>
+
+        <h3>Types of Data Collected</h3>
+
+        <h4>Personal Data</h4>
+
+        <p>While using my Site, I may ask you to provide me with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:</p>
+
+        <ul>
+        <li>First name and last name</li><li>Cookies and Usage Data</li>
+        </ul>
+
+        <h4>Usage Data</h4>
+
+        <p>When you access the Site by or through a mobile device, I may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use, unique device identifiers and other diagnostic data ("Usage Data").</p>
+
+        <h4>Tracking & Cookies Data</h4>
+        <p>I may use cookies and similar tracking technologies to track the activity on my Site and hold certain information.</p>
+        <p>Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags, and scripts to collect and track information and to improve and analyze my Site.</p>
+        <p>You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of my Site.</p>
+
+        <h2>Use of Data</h2>
+            
+        <p>IncVocab uses the collected data for various purposes:</p>    
+        <ul>
+            <li>To provide and maintain the Site</li>
+            <li>To notify you about changes to my Site</li>
+            <li>To allow you to participate in interactive features of my Site when you choose to do so</li>
+            <li>To provide customer care and support</li>
+            <li>To provide analysis or valuable information so that I can improve the Site</li>
+            <li>To monitor the usage of the Site</li>
+            <li>To detect, prevent and address technical issues</li>
+        </ul>
+
+        <h2>Transfer Of Data</h2>
+        <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
+        <p>If you are located outside Italy and choose to provide information to me, please note that I transfer the data, including Personal Data, to Italy and process it there.</p>
+        <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
+        <p>IncVocab will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+
+        <h2>Disclosure Of Data</h2>
+
+        <h3>Legal Requirements</h3>
+        <p>IncVocab may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
+        <ul>
+            <li>To comply with a legal obligation</li>
+            <li>To protect and defend the rights or property of IncVocab</li>
+            <li>To prevent or investigate possible wrongdoing in connection with the Site</li>
+            <li>To protect the personal safety of users of the Site or the public</li>
+            <li>To protect against legal liability</li>
+        </ul>
+
+        <h2>Security Of Data</h2>
+        <p>The security of your data is important to me, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While I strive to use commercially acceptable means to protect your Personal Data, I cannot guarantee its absolute security.</p>
+
+        <h2>Service Providers</h2>
+        <p>I may employ third party companies and individuals to facilitate my Site ("Service Providers"), to provide the Site on my behalf, to perform Site-related services or to assist me in analyzing how my Site is used.</p>
+        <p>These third parties have access to your Personal Data only to perform these tasks on my behalf and are obligated not to disclose or use it for any other purpose.</p>
+
+
+
+        <h2>Links To Other Sites</h2>
+        <p>My Site may contain links to other sites that are not operated by me. If you click on a third party link, you will be directed to that third party's site. I strongly advise you to review the Privacy Policy of every site you visit.</p>
+        <p>I have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
+
+
+        <h2>Children's Privacy</h2>
+        <p>My Site does not address anyone under the age of 18 ("Children").</p>
+        <p>I do not knowingly collect personally identifiable information from anyone under the age of 18. If you are a parent or guardian and you are aware that your Children has provided me with Personal Data, please contact me. If I become aware that I have collected Personal Data from children without verification of parental consent, I take steps to remove that information from my servers.</p>
+
+        <h2>User Data Deletion</h2>
+        <p>Account creation is not provided. User information is stored solely locally on their own phones. Upon deletion of the IncVocab mobile application, all information is automatically removed.</p>
+
+        <h2>Changes To This Privacy Policy</h2>
+        <p>I may update my Privacy Policy from time to time. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
+        <p>I will not let you know via email. I will only update of the “Last updated” string at the top of this Privacy Policy.</p>
+        <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
 
 
         <h2>Contact Me</h2>
