--- a/incvocab-terms-of-use.html
+++ b/incvocab-terms-of-use.html
@@ -8,21 +8,62 @@
         </style>
     </head>
     <body>
-
-        <h1>IncVocab Terms of Use</h1>
-
-
-        <p>Last updated September 19, 2019</p>
+        <h1>Terms of Use of IncVocab</h1>
 
 
+        <p>Last updated Aprile 4, 2024</p>
 
 
-        <h2>Contact Me</h2>
-        <p>If you have any questions about this Privacy Policy, please contact me:</p>
-        <ul>
-                <li>By email: denis.svichkarev@gmail.com</li>
-                  
-                </ul>
+        <p>These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("you") and Denis Svichkarev ("me", "I", or "my"), concerning your access to and use of https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site"). Please read the Terms of Use carefully before you start using IncVocab, because by using the Site you accept and agree to be bound and abide by these Terms of Use.</p>
 
-     </body>
+        <p>I expressly reserve the right to change these Terms of Use from time to time without notice to you. You acknowledge and agree that it is your responsibility to review this Site and these Terms of Use from time to time and to familiarize yourself with any modifications. Your continued use of this Site after such modifications will constitute acknowledgment of the modified Terms of Use and agreement to abide and be bound by the modified Terms of Use.</p>
+
+        <h2>Conduct on Site</h2>
+        <p>Your use of the Site is subject to all applicable laws and regulations, and you are solely responsible for the substance of your communications through the Site.</p>
+
+        <p>By posting information in or otherwise using any communications service, chat room, message board, newsgroup, software library, or other interactive service that may be available to you on or through this Site, you agree that you will not upload, share, post, or otherwise distribute or facilitate distribution of any content — including text, communications, software, images, sounds, data, or other information — that:
+
+        <ul><li>Is unlawful, threatening, abusive, harassing, defamatory, libelous, deceptive, fraudulent, invasive of another's privacy, tortious, contains explicit or graphic descriptions or accounts of sexual acts (including but not limited to sexual language of a violent or threatening nature directed at another individual or group of individuals), or otherwise violates my rules or policies</li>
+        <li>Victimizes, harasses, degrades, or intimidates an individual or group of individuals on the basis of religion, gender, sexual orientation, race, ethnicity, age, or disability</li>
+        <li>Infringes on any patent, trademark, trade secret, copyright, right of publicity, or other proprietary right of any party</li>
+        <li>Constitutes unauthorized or unsolicited advertising, junk or bulk email (also known as "spamming"), chain letters, any other form of unauthorized solicitation, or any form of lottery or gambling</li>
+        <li>Contains software viruses or any other computer code, files, or programs that are designed or intended to disrupt, damage, or limit the functioning of any software, hardware, or telecommunications equipment or to damage or obtain unauthorized access to any data or other information of any third party</li>
+        <li>Impersonates any person or entity, including any of my employees or representatives</li></ul>
+
+        I neither endorse nor assume any liability for the contents of any material uploaded or submitted by third party users of the Website. I generally do not pre-screen, monitor, or edit the content posted by users of communications services, chat rooms, message boards, newsgroups, software libraries, or other interactive services that may be available on or through this Site.</p>
+
+        <p>However, I and my agents have the right at their sole discretion to remove any content that, in my judgment, does not comply with these Terms of Use and any other rules of user conduct for my Site, or is otherwise harmful, objectionable, or inaccurate. I am not responsible for any failure or delay in removing such content. You hereby consent to such removal and waive any claim against me arising out of such removal of content.</p>
+
+        <p>You agree that I may at any time, and at my sole discretion, terminate your membership, account, or other affiliation with my Site without prior notice to you for violating any of the above provisions.</p>
+
+        <p>In addition, you acknowledge that I will cooperate fully with investigations of violations of systems or network security at other sites, including cooperating with law enforcement authorities in investigating suspected criminal violations.</p>
+
+        <h2>Intellectual Property</h2>
+        <p>By accepting these Terms of Use, you acknowledge and agree that all content presented to you on this Site is protected by copyrights, trademarks, service marks, patents or other proprietary rights and laws, and is the sole property of IncVocab.</p>
+
+        <p>You are only permitted to use the content as expressly authorized by me or the specific content provider. Except for a single copy made for personal use only, you may not copy, reproduce, modify, republish, upload, post, transmit, or distribute any documents or information from this Site in any form or by any means without prior written permission from me, and you are solely responsible for obtaining permission before reusing any copyrighted material that is available on this Site.</p>
+
+        <h2>Third Party Websites</h2>
+        <p>This Site may link you to other sites on the Internet or otherwise include references to information, documents, software, materials and/or services provided by other parties. These websites may contain information or material that some people may find inappropriate or offensive.</p>
+
+        <p>These other websites and parties are not under my control, and you acknowledge that I am not responsible for the accuracy, copyright compliance, legality, decency, or any other aspect of the content of such sites, nor am I responsible for errors or omissions in any references to other parties or their products and services. The inclusion of such a link or reference is provided merely as a convenience and does not imply endorsement of, or association with, the Site or party by me, or any warranty of any kind, either express or implied.</p>
+
+        <h2>Disclaimer of Warranties, Limitations of Liability and Indemnification</h2>
+        <p>Your use of IncVocab is at your sole risk. The Site is provided "as is" and "as available". I disclaim all warranties of any kind, express or implied, including, without limitation, the warranties of merchantability, fitness for a particular purpose and non-infringement.</p>
+
+        <p>I am not liable for damages, direct or consequential, resulting from your use of the Site, and you agree to defend, indemnify and hold me harmless from any claims, losses, liability costs and expenses (including but not limites to attorney's fees) arising from your violation of any third-party's rights. You acknowledge that you have only a limited, non-exclusive, nontransferable license to use the Site. Because the Site is not error or bug free, you agree that you will use it carefully and avoid using it ways which might result in any loss of your or any third party's property or information.</p>
+
+        <h2>Term and termination</h2>
+        <p>This Terms of Use will become effective in relation to you when you create a IncVocab account or when you start using the IncVocab and will remain effective until terminated by you or by me.</p>
+
+        <p>IncVocab reserves the right to terminate this Terms of Use or suspend your account at any time in case of unauthorized, or suspected unauthorized use of the Site whether in contravention of this Terms of Use or otherwise. If IncVocab terminates this Terms of Use, or suspends your account for any of the reasons set out in this section, IncVocab shall have no liability or responsibility to you.</p>
+
+        <h2>Assignment</h2>
+        <p>IncVocab may assign this Terms of Use or any part of it without restrictions. You may not assign this Terms of Use or any part of it to any third party.</p>
+
+        <h2>Governing Law</h2>
+        <p>These Terms of Use and any dispute or claim arising out of, or related to them, shall be governed by and construed in accordance with the internal laws of Italy without giving effect to any choice or conflict of law provision or rule.</p>
+
+        <p>Any legal suit, action or proceeding arising out of, or related to, these Terms of Use or the Site shall be instituted exclusively in the federal courts of Italy.</p>
+    </body>
 </html>
