--- a/incvocab-privacy-policy.html
+++ b/incvocab-privacy-policy.html
@@ -12,7 +12,7 @@
         <h1>Privacy Policy of IncVocab</h1>
 
 
-        <p>Last updated Aprile 4, 2024</p>
+        <p>Last updated Aprile 11, 2024</p>
 
 
         <p>Denis Svichkarev ("me", "I", or "my") operates https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site").</p>
@@ -108,7 +108,7 @@
         <h2>Contact Me</h2>
         <p>If you have any questions about this Privacy Policy, please contact me:</p>
         <ul>
-                <li>By email: denis.svichkarev@gmail.com</li>
+                <li>By email: incvocabulary@gmail.com</li>
                   
                 </ul>
 
