--- a/incvocab-marketing.html
+++ b/incvocab-marketing.html
@@ -7,6 +7,7 @@
             font-family: verdana;
             color: #1A548E;
             padding: 30px;
+            padding-top: 100px; /* Add padding to the top */
             margin: 0;
         }
 
@@ -122,7 +123,7 @@
 </div>
 
 <div class="section">
-    <p class="call-to-action">Download IncVocab today and embark on a journey to expand your English vocabulary effortlessly:</p>
+    <p class="call-to-action">Download IncVocab today and embark on a journey to expand your vocabulary effortlessly:</p>
     <div class="download-container">
         <a href="https://apps.apple.com/us/app/incvocab-english/id1333951318?platform=iphone" class="download-button">Download English version</a>
         <a href="https://apps.apple.com/us/app/incvocab-german/id1333951878?platform=iphone" class="download-button">Download German version</a>
