--- a/incvocab-privacy-policy.html
+++ b/incvocab-privacy-policy.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style>
-            body{background: #fff; font-family: verdana; color: #1A548E; padding: 30px;}
+            body{background: #ECECDF; font-family: verdana; color: #1A548E; padding: 30px;}
             h1{font-size: 36px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
             p{font-size: 16px;}
         </style>
@@ -12,7 +12,7 @@
         <h1>Privacy Policy of IncVocab</h1>
 
 
-        <p>Last updated Aprile 11, 2024</p>
+        <p>Last updated Aprile 12, 2024</p>
 
 
         <p>Denis Svichkarev ("me", "I", or "my") operates https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site").</p>
