--- a/incvocab-marketing.html
+++ b/incvocab-marketing.html
@@ -97,14 +97,15 @@
 
 <div class="section">
     <h1>Introducing IncVocab: Your Personal Dictionary Companion</h1>
-    <p>Effortlessly enhance your vocabulary with IncVocab. Say goodbye to traditional dictionaries and welcome a personalized approach to learning.</p>
+    <p>Dive into a world of words with IncVocab! Revolutionize your vocabulary learning experience with our personalized approach. Explore over 1000 curated collections across 18 languages, designed to cater to learners of all levels. With interactive flashcards and customizable collections, mastering new words has never been easier. Set your learning goals, track your progress, and embark on a seamless journey to fluency. Download IncVocab now and unlock the door to linguistic excellence.</p>
 </div>
 
 <div class="section">
     <h2 class="section-header">Key Features</h2>
     <div class="list">
         <ul>
-            <li class="list-item">Learn languages with curated collections tailored to your proficiency level.</li>
+            <li class="list-item">Access over 1000 curated collections in 18 different languages, covering a wide range of topics.</li>
+            <li class="list-item">Learn English with collections designed for different proficiency levels, including beginners, intermediate, and advanced learners.</li>
             <li class="list-item">Easily add words to your own custom collections.</li>
             <li class="list-item">Master words using interactive flashcards.</li>
             <li class="list-item">Track your vocabulary growth with insightful statistics.</li>
