Updated Privacy Policy

--- a/incvocab-marketing.html
+++ b/incvocab-marketing.html
@@ -3,7 +3,7 @@
 <head>
        <style>
         body {
-            background: #ECECDF;
+            background: #f9f9f1;
             font-family: verdana;
             color: #1A548E;
             padding: 30px;
