--- a/incvocab-privacy-policy.html
+++ b/incvocab-privacy-policy.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style>
-            body{background: #ECECDF; font-family: verdana; color: #1A548E; padding: 30px;}
+            body{background: #f9f9f1; font-family: verdana; color: #1A548E; padding: 30px;}
             h1{font-size: 36px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
             p{font-size: 16px;}
         </style>
@@ -12,7 +12,7 @@
         <h1>Privacy Policy of IncVocab</h1>
 
 
-        <p>Last updated Aprile 12, 2024</p>
+        <p>Last updated Aprile 14, 2024</p>
 
 
         <p>Denis Svichkarev ("me", "I", or "my") operates https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site").</p>
@@ -61,31 +61,16 @@
         </ul>
 
         <h2>Transfer Of Data</h2>
-        <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
         <p>If you are located outside Italy and choose to provide information to me, please note that I transfer the data, including Personal Data, to Italy and process it there.</p>
         <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
         <p>IncVocab will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
-
-        <h2>Disclosure Of Data</h2>
-
-        <h3>Legal Requirements</h3>
-        <p>IncVocab may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
-        <ul>
-            <li>To comply with a legal obligation</li>
-            <li>To protect and defend the rights or property of IncVocab</li>
-            <li>To prevent or investigate possible wrongdoing in connection with the Site</li>
-            <li>To protect the personal safety of users of the Site or the public</li>
-            <li>To protect against legal liability</li>
-        </ul>
-
-        <h2>Security Of Data</h2>
-        <p>The security of your data is important to me, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While I strive to use commercially acceptable means to protect your Personal Data, I cannot guarantee its absolute security.</p>
 
         <h2>Service Providers</h2>
         <p>I may employ third party companies and individuals to facilitate my Site ("Service Providers"), to provide the Site on my behalf, to perform Site-related services or to assist me in analyzing how my Site is used.</p>
         <p>These third parties have access to your Personal Data only to perform these tasks on my behalf and are obligated not to disclose or use it for any other purpose.</p>
 
-
+        <h2>Security Of Data</h2>
+        <p>The security of your data is important to me, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While I strive to use commercially acceptable means to protect your Personal Data, I cannot guarantee its absolute security.</p>
 
         <h2>Links To Other Sites</h2>
         <p>My Site may contain links to other sites that are not operated by me. If you click on a third party link, you will be directed to that third party's site. I strongly advise you to review the Privacy Policy of every site you visit.</p>
@@ -95,6 +80,11 @@
         <h2>Children's Privacy</h2>
         <p>My Site does not address anyone under the age of 18 ("Children").</p>
         <p>I do not knowingly collect personally identifiable information from anyone under the age of 18. If you are a parent or guardian and you are aware that your Children has provided me with Personal Data, please contact me. If I become aware that I have collected Personal Data from children without verification of parental consent, I take steps to remove that information from my servers.</p>
+
+        <h2>Data Storage and Usage</h2>
+        <p>It is important to note that I do not store Personal Data on external servers or databases. All user information is solely stored locally on their own devices. The only technical data collected pertains to the user's device for the purpose of diagnosing issues related to the performance of the mobile application. This may include information such as device type, operating system, and app crashes.</p>
+        <p>For the purpose of analyzing and improving the performance of the IncVocab mobile application, I utilize Google Analytics. Google Analytics may collect certain technical data from users' devices, but no personally identifiable information is obtained through this process. The data collected by Google Analytics is used solely for the purpose of diagnosing technical issues and improving the user experience.</p>
+        <p>If you have any concerns about the data collection process or require further clarification, please do not hesitate to contact me.</p>
 
         <h2>User Data Deletion</h2>
         <p>Account creation is not provided. User information is stored solely locally on their own phones. Upon deletion of the IncVocab mobile application, all information is automatically removed.</p>
