--- a/incvocab-terms-of-use.html
+++ b/incvocab-terms-of-use.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style>
-            body{background: #ECECDF; font-family: verdana; color: #1A548E; padding: 30px;}
+            body{background: #f9f9f1; font-family: verdana; color: #1A548E; padding: 30px;}
             h1{font-size: 36px; text-transform: uppercase; letter-spacing: 2px; text-align: center;}
             p{font-size: 16px;}
         </style>
@@ -11,7 +11,7 @@
         <h1>Terms of Use of IncVocab</h1>
 
 
-        <p>Last updated Aprile 12, 2024</p>
+        <p>Last updated Aprile 14, 2024</p>
 
 
         <p>These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("you") and Denis Svichkarev ("me", "I", or "my"), concerning your access to and use of https://denis-svichkarev.github.io/ website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the "Site"). Please read the Terms of Use carefully before you start using IncVocab, because by using the Site you accept and agree to be bound and abide by these Terms of Use.</p>
